slowly finishing settings

--- a/static/pages/app.html
+++ b/static/pages/app.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="color-scheme" content="dark light" />
+    <style>
+      .body {
+        background-color: #fff;
+      }
+
+      @media (prefers-color-schema: dark) {
+        .body,
+        #app,
+        html {
+          background-color: #000;
+        }
+      }
+    </style>
   </head>
 
   <body>
